--- a/css/index.css
+++ b/css/index.css
@@ -59,7 +59,7 @@ section.hero .container.slider-container
 
 .slide .slide-content p
 {
-    font-size: 18px;
+    font-size: 4cqw;
     padding: 20px 5px;
 }
 
